--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
-
 <head>
+    <title>MODUL</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-    <div id="main">
+    <div id="main" class="modul-container">
         <div id="vue"></div>
     </div>
 <script type="text/javascript" src="/app.js"></script></body>
