--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <div id="main" class="modul-container">
         <div id="vue"></div>
     </div>
-<script type="text/javascript" src="/app.js"></script></body>
+<script type="text/javascript" src="/app.js"></script>
+<script>
+  (function(){
+    var redirect = sessionStorage.redirect;
+    delete sessionStorage.redirect;
+    if (redirect && redirect != location.href) {
+      history.replaceState(null, null, redirect);
+    }
+  })();
+</script>
+</body>
 
 </html>
