--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <script>
   (function(){
     var redirect = sessionStorage.redirect;
+    console.log('load', redirect);
+    console.log('load-href', location.href);
     delete sessionStorage.redirect;
     if (redirect && redirect != location.href) {
       history.replaceState(null, null, redirect);
