--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!doctype html>
-<html>
-
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-
-<body>
-    <div id="main">
-        <div id="vue"></div>
-    </div>
-<script type="text/javascript" src="/app.js"></script></body>
-
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=stylesheet href=https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css integrity=sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS crossorigin=anonymous><link rel=icon href=/favicon.ico><title>s-cool</title><link href=/js/about.0ba7a350.js rel=prefetch><link href=/css/app.ac906db3.css rel=preload as=style><link href=/js/app.87a4aec8.js rel=preload as=script><link href=/js/chunk-vendors.98e15fa3.js rel=preload as=script><link href=/css/app.ac906db3.css rel=stylesheet></head><body><noscript><strong>We're sorry but s-cool doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.98e15fa3.js></script><script src=/js/app.87a4aec8.js></script></body></html>
