--- a/geo/index.html
+++ b/geo/index.html
@@ -13,7 +13,8 @@
             <span id="lat"></span>
         </div>
         <div>
-            <span id="lon">Lon:</span>
+            <span>Lon:</span>
+            <span id="lon"></span>
         </div>
     </div>
 </body>
