--- a/timing/closure/index.html
+++ b/timing/closure/index.html
@@ -10,7 +10,7 @@
 </body>
 
 <script>
-    (async function () {
+    (function () {
         window.setTimeout(() => {
             getAsync().then(s => {
                 const e = document.getElementById('date');
