--- a/timing/closure/index.html
+++ b/timing/closure/index.html
@@ -18,7 +18,7 @@
                 txt += s.dateS + ',' + s.dateR + '<br/>';
 
                 const e = document.getElementById('date');
-                e.innerText = txt;
+                e.innerHTML = txt;
             });
         }, 10000);
     })();
@@ -26,9 +26,10 @@
     function getAsync() {
         return new Promise((resolve, reject) => {
             const closure = () => {
+                const d = Date.now();
                 resolve({
-                    dateS: new Date(Date.now()).toString(),
-                    dateR: Date.now()
+                    dateS: new Date(d).toString(),
+                    dateR: new Date(Date.now()).toString(),
                 });
             }
 
